[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Wesley Norris <repnop@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
bstr = "0.2.14"
itertools = "0.9.0"
logos = "0.11.4"
nalgebra = "0.23.1"
once_cell = "1.5.2"
petgraph = "0.5.1"
regex = "1.4.2"
serde = { version = "1.0.117", features = ["derive"] }
